removed something in the css and fixed the spacing of the codes in html

--- a/style.css
+++ b/style.css
@@ -203,8 +203,3 @@ nav a:hover {
 footer {
     text-align: center;
 }
-
-/* Smooth Scroll */
-html {
-    scroll-behavior: smooth;
-}
